syntax = "proto3";

package service.pb;

option go_package = "github.com/plgd-dev/client-application/pb;pb";

message InitializeRequest {
    string jwk_content = 1;
}

message InitializeResponse {}

